cabal-version:       >=1.10

name:                dupli
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Oxel40
maintainer:          ...
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable dupli
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base,
                       directory,
                       cryptohash-sha1,
                       bytestring,
                       hashmap
  -- hs-source-dirs:
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -threaded +RTS -N4 -RTS
  -- ghc-options:         -prof -fprof-auto -rtsopts
